Code roots are not accounted for in region prediction

XMLWordPrintable

    • gc
    • b16

      In JDK-7145569 per-region code root remembered sets were introduced.

      However these per-region remembered sets are not accounted for in the region prediction.

      I.e. G1CollectorPolicy::predict_region_elapsed_time_ms() does not take code roots into account.

      This negatively affects pause time prediction performance

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: