8030815: Code roots are not accounted for in region prediction

Reviewed-by: iwalulya, ayang